--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,3 +1,11 @@
+html {
+    font-size: 18px;
+}
+
+.md-html {
+     font-size: 24px !important; 
+}
+
 a {
     color: #f4ad24;
     text-decoration: none;
